--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -78,3 +78,43 @@
 .sim{
   width: 365px;
 }
+/*#error-message {
+   display: none;
+}
+@media only screen and (max-width: 1278px) {
+   #error-message {
+        display: block;
+   }
+}
+#main-area{
+  display: block;
+}
+@media only screen and (max-width: 1278px) {
+   #main-area {
+        display: none;
+   }
+}*/
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
